--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "tsx ./index.ts",
-    "start:dev": "tsx watch ./index.ts",
+    "start": "tsx ./src/wss/index.ts",
+    "start:dev": "tsx watch ./src/wss/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Andrei Auchynnikau",
